feat: Data indexer (#28)