@@ -30,11 +30,23 @@ dependencies {
 	implementation "org.apache.logging.log4j:log4j-layout-template-json:2.20.0"
 	implementation "org.apache.logging.log4j:log4j-slf4j2-impl:2.20.0"
 	implementation "io.reactivex.rxjava3:rxjava:3.1.6"
+	implementation "com.autonomouslogic.commons:commons-java:1.6.1"
+	implementation "de.neuland-bfi:pug4j:2.0.6"
+	implementation "software.amazon.awssdk:s3:2.20.17"
+	implementation "com.fasterxml.jackson.core:jackson-annotations:2.13.4"
+	implementation "com.fasterxml.jackson.core:jackson-core:2.13.4"
+	implementation "com.fasterxml.jackson.core:jackson-databind:2.13.4.2"
+	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.4"
+	implementation "org.apache.commons:commons-pool2:2.4.2"
+	implementation "org.apache.commons:commons-compress:1.21"
 
 	testAnnotationProcessor "com.google.dagger:dagger-compiler:2.45"
 	testImplementation "com.google.dagger:dagger:2.45"
 	testImplementation "org.junit.jupiter:junit-jupiter:5.9.2"
 	testImplementation "org.junit.jupiter:junit-jupiter-params:5.9.2"
+	testImplementation "org.junit-pioneer:junit-pioneer:2.0.0"
+	testImplementation "org.mockito:mockito-junit-jupiter:5.0.0"
+	testImplementation "org.jsoup:jsoup:1.15.4"
 }
 
 java {
@@ -54,10 +66,10 @@ test {
 		showStackTraces = true
 	}
 
-	environment "TEST_ENV_VAR_STRING", "test-value"
-	environment "TEST_ENV_VAR_INTEGER", "12345"
-	environment "TEST_ENV_VAR_BOOL_TRUE", "true"
-	environment "TEST_ENV_VAR_BOOL_FALSE", "false"
+	environment "LOG_LEVEL", "debug"
+
+	// https://junit-pioneer.org/docs/environment-variables/#warnings-for-reflective-access
+	jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED", "--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
 
 jacocoTestReport {
@@ -87,6 +99,14 @@ application {
 task placeholder(type: JavaExec) {
 	group "application"
 	args "placeholder"
+
+	classpath = sourceSets.main.runtimeClasspath
+	mainClass = mainClassName
+}
+
+task dataIndex(type: JavaExec) {
+	group "application"
+	args "data-index"
 
 	classpath = sourceSets.main.runtimeClasspath
 	mainClass = mainClassName
